--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,5 @@
 # SSL certificates for development
-# $ mkcert -cert-file=anton-karpenko-magento.local+1.pem -key-file=anton-karpenko-magento.local+1-key.pem anton-karpenko-magento.local www.anton-karpenko-magento.local-magento.local
+# $ mkcert -cert-file=anton-karpenko-magento.local+3.pem -key-file=anton-karpenko-magento.local+3-key.pem anton-karpenko-magento.local www.anton-karpenko-magento.local anton-karpenko-magento.us www.anton-karpenko-magento.us
 #
 # Start composition:
 # $ docker-compose up -d
@@ -27,13 +27,13 @@ services:
     labels:
       - traefik.enable=true
       # HTTP
-      - traefik.http.routers.anton-karpenko-magento-local-http.rule=Host(`anton-karpenko-magento.local`,`www.anton-karpenko-magento.local-magento.local`)
+      - traefik.http.routers.anton-karpenko-magento-local-http.rule=Host(`anton-karpenko-magento.local`,`www.anton-karpenko-magento.local`,`anton-karpenko-magento.us`,`www.anton-karpenko-magento.us`)
       - traefik.http.routers.anton-karpenko-magento-local-http.entrypoints=http
       - traefik.http.routers.anton-karpenko-magento-local-http.service=anton-karpenko-magento-local-http
       - traefik.http.services.anton-karpenko-magento-local-http.loadbalancer.server.port=80
       - traefik.http.services.anton-karpenko-magento-local-http.loadbalancer.server.scheme=http
       # HTTPS
-      - traefik.http.routers.anton-karpenko-magento-local-https.rule=Host(`anton-karpenko-magento.local`,`www.anton-karpenko-magento.local-magento.local`)
+      - traefik.http.routers.anton-karpenko-magento-local-https.rule=Host(`anton-karpenko-magento.local`,`www.anton-karpenko-magento.local`,`anton-karpenko-magento.us`,`www.anton-karpenko-magento.us`)
       - traefik.http.routers.anton-karpenko-magento-local-https.entrypoints=https
       - traefik.http.routers.anton-karpenko-magento-local-https.tls=true
       - traefik.http.routers.anton-karpenko-magento-local-https.service=anton-karpenko-magento-local-https
@@ -41,7 +41,7 @@ services:
       - traefik.http.services.anton-karpenko-magento-local-https.loadbalancer.server.scheme=https
     # Must add extra_hosts to be written to /etc/hosts - otherwise containerized application can not curl itself
     extra_hosts:
-      - "anton-karpenko-magento.local www.anton-karpenko-magento.local-magento.local:127.0.0.1"
+      - "anton-karpenko-magento.local www.anton-karpenko-magento.local anton-karpenko-magento.us www.anton-karpenko-magento.us:127.0.0.1"
       # Required for xDebug on Linux hosts till docker.host.internal is not available by default - https://github.com/docker/libnetwork/pull/2348/files
       - "host.docker.internal:172.17.0.1"
     links:
