#2 Install multi-website Magento instance: added Readme.md with deployment instructions and configured domains mapping in .pub/.htaccess

--- a/pub/.htaccess
+++ b/pub/.htaccess
@@ -122,6 +122,11 @@
     Options +FollowSymLinks
     RewriteEngine on
 
+    SetEnvIf Host .*anton-karpenko-magento.local.* MAGE_RUN_CODE=default
+    SetEnvIf Host .*anton-karpenko-magento.local.* MAGE_RUN_TYPE=store
+    SetEnvIf Host .*anton-karpenko-magento.us.* MAGE_RUN_CODE=us_store_view
+    SetEnvIf Host .*anton-karpenko-magento.us.* MAGE_RUN_TYPE=store
+
 ############################################
 ## You can put here your magento root folder
 ## path relative to web root
